inicio do projeto-cordel

--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -14,7 +14,7 @@
         background-position: center center;
         background-repeat: no-repeat; /*REPEAT-Y equivale a repetição da imagem apenas verticalmente. E o REPEAT-X é sua repetição só que horizontal*/
         background-size: cover;
-        background-attachment: fixed; /*Também conhecido como "vínculo". A propriedade "fixed" tem o intuito de fixar a imagem de fundo na tela, para que ela no role com o conteúdo presente. Já o "Scrool" executa o contrario e faz com que a imagem role junto com o conteúdo*/
+        background-attachment: fixed; /*Também conhecido como "vínculo". A propriedade "fixed" tem o intuito de fixar a imagem de fundo na tela, para que ela não role com o conteúdo presente. Já o "Scrool" executa o contrario e faz com que a imagem role junto com o conteúdo*/
 
         /*background:
         A shorthand background permite definir várias propriedades relacionadas ao fundo, como background-color, background-image, background-repeat, background-position e background-size. A ordem geralmente seguida é: background-color, background-image, background-repeat, background-position e background-size.
