atualizei o site cordel

--- a/projeto-cordel/index.html
+++ b/projeto-cordel/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a></p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
     </header>
 
     <main>
@@ -46,8 +46,7 @@
                 Se o saite é muito bom <br>
                 Ele vale um alto preço. <br>
             </p>
-        </section>
-        <section class="normal">
+
                 <p>
                     Pra piorar a liguagem <br>
                     O emoticom é um risco <br>
@@ -79,8 +78,7 @@
                 O mundo ficou cativo <br>
                 Da tecnologia do agora. <br>
             </p>
-        </section>
-        <section class="normal">
+
             <p>
                 Felizmente, pra orar <br>
                 Não precisa de internet <br>
@@ -92,6 +90,6 @@
             </p>
         </section>
     </main>
-    <footer>Site criado por <a href="https://gustavoguanabara.github.io/">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/">CursoemVideo</a></footer>
+    <footer>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></footer>
 </body>
 </html>
