--- a/projeto-cordel/index.html
+++ b/projeto-cordel/index.html
@@ -46,16 +46,17 @@
                 Se o saite é muito bom <br>
                 Ele vale um alto preço. <br>
             </p>
-
-                <p>
-                    Pra piorar a liguagem <br>
-                    O emoticom é um risco <br>
-                    Tem símbolo para tudo <br>
-                    Ponto e vírgula e um asterisco <br>
-                    Um beijo significa <br>
-                    Pra entender como fica <br>
-                    Decifre esse rabisco. <br>
-                </p>
+        </section>
+        <section class="normal">
+            <p>
+                Pra piorar a liguagem <br>
+                O emoticom é um risco <br>
+                Tem símbolo para tudo <br>
+                Ponto e vírgula e um asterisco <br>
+                Um beijo significa <br>
+                Pra entender como fica <br>
+                Decifre esse rabisco. <br>
+            </p>
         </section>
         <section class="imagem" id="img02">
             <p>
@@ -78,7 +79,8 @@
                 O mundo ficou cativo <br>
                 Da tecnologia do agora. <br>
             </p>
-
+            </section>
+            <section class="normal">
             <p>
                 Felizmente, pra orar <br>
                 Não precisa de internet <br>
