--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -34,7 +34,7 @@
 
 
         <!--
-            HIERARQUIA DE TABELAS HTML (SIMPLES)
+            ANATOMIA DE TABELAS SIMPLES
 
             TABLE = TABELA
                 TABLE ROW = Linha de Tabela
