--- a/exercicios/ex025/input/aula1.html
+++ b/exercicios/ex025/input/aula1.html
@@ -6,7 +6,7 @@
     <title>Input</title>
 </head>
 <body>
-    <form action="formulario.js" method="post" autocomplete="off"> 
+    <form action="formulario.js" method="post" autocomplete="on"> 
     <!--O ACTION NOS LEVA PARA QUAL DOCUMENTO VAMOS SUBMITER O FORMULARIO. 
     JÁ O METHOD TEMOS DUAS OPÇÕES (GET: QUE É PARA FORMULARIOS MAIS SIMPLES QUE NÃO POSSUEM INFORMAÇÕES "CONFIDENCIAIS", PODEMOS ENVIAR NO MÁXIMO 300BYTES) (POST: PARA FORMULÁRIOS MAIS SENSIVEIS ONDE POSSUIMOS SENHA, CARTÕES... NÃO TEMOS QUANTIDADE LIMITADA DE BYTES POR ENVIO)
     E O AUTOCOMPLETE QUE É QUANDO QUEREMOS OU NÃO QUE NOSSOS CAMPOS SEJAM AUTOMÁTICAMENTE COMPLETADOS.-->
