--- a/exercicios/ex025/input/atividade1.html
+++ b/exercicios/ex025/input/atividade1.html
@@ -13,26 +13,26 @@
         <fieldset>
             <legend>Dados pessoais</legend>
             <label for="nome">Nome:</label>
-            <input type="text" name="nome" id="nome">
+            <input type="text" name="nome" id="nome" required> <!--COM RIQUERED COLOCAMOS UM ATRIBUTO COMO OBRIGATORIO-->
             <label for="sobrenome">Sobrenome:</label>
-            <input type="text" name="sobrenome" id="sobrenome"> <br>
+            <input type="text" name="sobrenome" id="sobrenome" required> <br>
 
             <label for="rg">RG:</label>
-            <input type="text" name="rg" id="rg" size="10" maxlength="9"> <br>
+            <input type="text" name="rg" id="rg" size="10" maxlength="9" required> <br>
 
             <label for="cpf">CPF:</label>
-            <input type="text" name="cpf" id="cpf" size="3" maxlength="3"> -
+            <input type="text" name="cpf" id="cpf" size="3" maxlength="3" required> -
             <label for="cpf2"></label>
-            <input type="text" name="cpf2" id="cpf2" size="8" maxlength="8"> <br>
+            <input type="text" name="cpf2" id="cpf2" size="8" maxlength="8" required> <br>
 
             <label for="dia">Data Nascimento:</label>
-            <input type="text" name="dia" id="dia" value="dd" size="2" maxlength="2">
+            <input type="text" name="dia" id="dia" value="dd" size="2" maxlength="2" required>
 
             <label for="mes">-</label>
-            <input type="text" name="mes" id="mes" value="mm" size="2" maxlength="2">
+            <input type="text" name="mes" id="mes" value="mm" size="2" maxlength="2" required>
 
             <label for="ano">-</label> 
-            <input type="text" name="ano" id="ano" value="aaaa" size="4" maxlength="4"> <br>
+            <input type="text" name="ano" id="ano" value="aaaa" size="4" maxlength="4" required> <br>
 
         </fieldset>
 
@@ -40,18 +40,18 @@
         <fieldset>
             <legend>Endereço</legend>
             <label for="rua">Rua:</label>
-            <input type="text" name="rua" id="rua">
+            <input type="text" name="rua" id="rua" required>
             <label for="numero">Número:</label>
-            <input type="text" name="numero" id="numero" size="5" maxlength="4"> <br>
+            <input type="text" name="numero" id="numero" size="5" maxlength="4" required> <br>
 
             <label for="bairro">Bairro:</label>
-            <input type="text" name="bairro" id="bairro"> <br>
+            <input type="text" name="bairro" id="bairro" required> <br>
 
             <label for="cidade">Cidade:</label>
-            <input type="text" name="cidade" id="cidade">
+            <input type="text" name="cidade" id="cidade" required>
 
             <label for="estado">Estado:</label>
-            <select name="estado" id="estado">
+            <select name="estado" id="estado" required>
                 <option value="">Selecione</option>
                 <option value="AC">Acre</option>
                 <option value="AL">Alagoas</option>
@@ -83,19 +83,19 @@
             </select> <br>
 
             <label for="cep">CEP:</label>
-            <input type="text" name="cep" id="cep" size="6" maxlength="5">
+            <input type="text" name="cep" id="cep" size="6" maxlength="5" required>
             <label for="cep2">-</label>
-            <input type="text" name="cep2" id="cep2" size="3" maxlength="3">
+            <input type="text" name="cep2" id="cep2" size="3" maxlength="3" required>
         </fieldset>
 
         <!--DADOS LOGIN-->
         <fieldset>
             <legend>Login</legend>
             <label for="email">E-mail:</label>
-            <input type="email" name="email" id="email"> <br>
+            <input type="email" name="email" id="email" required> <br>
 
             <label for="senha">Senha:</label>
-            <input type="password" name="senha" id="senha" size="15" maxlength="10"> <br>
+            <input type="password" name="senha" id="senha" size="15" minlength="5" maxlength="12" required> <br>
 
             <label for="img">Imagem Perfil:</label>
             <input type="file" name="img" id="img">
@@ -103,9 +103,6 @@
 
         <input type="submit" value="Confirmar">
         <input type="reset" value="Limpar">
-
-
     </form>
 </body>
-
 </html>
