Criei a atividade3 e atualizei a atividade1

--- a/exercicios/ex025/input/atividade1.html
+++ b/exercicios/ex025/input/atividade1.html
@@ -92,7 +92,7 @@
         <fieldset>
             <legend>Login</legend>
             <label for="email">E-mail:</label>
-            <input type="email" name="email" id="email" required> <br>
+            <input type="email" name="email" id="email" autocomplete="email" required> <br>
 
             <label for="senha">Senha:</label>
             <input type="password" name="senha" id="senha" size="15" minlength="5" maxlength="12" required> <br>
