mq002 de Media Query

--- a/exercicios/ex026/mq001/index.html
+++ b/exercicios/ex026/mq001/index.html
@@ -7,6 +7,15 @@
     <!--CHAMADAS DE MEDIA QUERIES-->
     <link rel="stylesheet" href="estilos/tela.css" media="screen">
     <link rel="stylesheet" href="estilos/impressora.css" media="print">
+    <!--PRINCIPAIS MEDIA TYPES
+    ALL: ESSE MEDIA TYPE APLICA A REGRA CSS A TODOS OS DISPOSITIVOS.
+
+    PRINT: É USADO PARA ESTILIZAR DOCUMENTOS PARA IMPRESSÃO. POR EXEMPLO, VOCÊ PODE OCULTAR ELEMENTOS DE NAVEGAÇÃO OU AJUSTAR O LAYOUT PARA MELHOR SE ADEQUAR A UMA PÁGINA IMPRESSA.
+
+    SCREEN: É O PADRÃO SE NENHUM OUTRO MEDIA TYPE FOR ESPECIFICADO. É USADO PARA APLICAR ESTILOS A DISPOSITIVOS DE TELA, COMO COMPUTADORES, TABLETS E SMARTPHONES. (PADRÃO)
+
+    SPEECH: APLICA ESTILOS A DISPOSITIVOS DE SÍNTESE DE VOZ, COMO LEITORES DE TELA. ISSO PODE INCLUIR AJUSTES NO LAYOUT PARA MELHORAR A ACESSIBILIDADE E A COMPREENSÃO.
+    -->
 </head>
 <body>
     <header>
