Atualização ex26 mq02

--- a/exercicios/ex026/mq002/index.html
+++ b/exercicios/ex026/mq002/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
-    <link rel="stylesheet" href="estilos/style.css" media="all">
     <link rel="stylesheet" href="estilos/retrato.css" media="screen and (orientation: portrait)">
     <link rel="stylesheet" href="estilos/paisagem.css" media="screen and (orientation: landscape)">
+    <link rel="stylesheet" href="estilos/style.css" media="all">
     <!--QUANDO UTILIZAMOS MEDIAS PODEMOS INFORMAR MEDIAS TYPES E MEDIAS FEATURES. MEDIA TYPES NÃO POSSUEM PARÊNTESE, JÁ MEDIAS FEATURES SÃO SEMPRE INDICADOS ENTRE PARÊNTESES.-->
+    <!--*O MEDIA ALL SEMPRE TEM QUE VIR POR ÚLTIMO!-->
 </head>
 <body>
     <h1>Mude a orientação do seu dispositivo</h1>
